...
            Text(
              context.loc.importTextTitle,
              style: Theme.of(context).textTheme.headlineSmall,
            ),
            AppSpacing.heightS16,
            TextField(
              key: const ValueKey('import_text_field'),
              controller: _textController,
              onChanged: _onTextChanged,
              maxLines: 10,
              decoration: InputDecoration(
                hintText: context.loc.importTextPasteHint,
                hintMaxLines: 3,
...
                  onPressed: _isImporting ? null : _importFile,
                ),
              ),
            ),
            AppSpacing.heightS24,
            ElevatedButton(
              key: const ValueKey('import_text_button'),
              onPressed: _isImporting ? null : _importText,
              child: _isImporting
                  ? const CircularProgressIndicator()
                  : Text(context.loc.importTextButton),
            ),
          ],
...
